# circuitx

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
app/: Application.cpp  Application.h  Visualizer.cpp  Visualizer.h  main.cpp
app/core/: CircuitEditor.cpp  CircuitEditor.h  CircuitSimulator.cpp  CircuitSimulator.h
app/helpers/: AssetManager.hpp  CoordinateTool.hpp  GridRenderer.hpp  WireTool.hpp
app/services/: CircuitController.cpp  CircuitController.h  CircuitService.cpp  CircuitService.h  CircuitView.cpp  CircuitView.h  ComponentType.h  SimulationResult.h  StateService.h  UiService.cpp  UiService.h  Visualizer.cpp  Visualizer.h
app/ui/: CanvasPanel.cpp  CanvasPanel.h  UiCommon.h  UiState.h
app/ui/panels/: ControlPanel.cpp  ControlPanel.h  NavPanel.cpp  NavPanel.h  PalettePanel.cpp  PalettePanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SettingsPanel.cpp  SettingsPanel.h  SimulationPanel.cpp  SimulationPanel.h  ToolboxPanel.cpp  ToolboxPanel.h  TopologyPanel.cpp  TopologyPanel.h
demo/: Application.cpp  Application.h  main.cpp
docs/: architecture.md  todo.md
include/circuitx/: circuit.hpp
solver/include/circuitx/: circuit.hpp
solver/src/: circuit.cpp
solver/src/stamping/: MnaContext.h  StampContext.cpp  StampContext.h
solver/src/stamping/handlers/: CapacitorStampHandler.cpp  CapacitorStampHandler.h  CurrentSourceStampHandler.cpp  CurrentSourceStampHandler.h  ResistorStampHandler.cpp  ResistorStampHandler.h  VoltageSourceStampHandler.cpp  VoltageSourceStampHandler.h
src/: circuit.cpp
